--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "module",
     "scripts": {
         "start": "nodemon src/server.js",
+        "build": "set NODE_ENV=prod&& node src/server.js",
         "debug": "ndb src/server.js"
     },
     "author": "Akshay",
